--- a/Test Rosenbrock.ipynb
+++ b/Test Rosenbrock.ipynb
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [19:49<00:00,  1.19s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [18:26<00:00,  1.11s/it]\n"
      ]
     },
     {
@@ -132,13 +132,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean      4.349035               0.0      1.188546\n",
-      "std       4.947727               0.0      2.017323\n",
-      "min       0.016877               0.0      0.136320\n",
-      "25%       0.693364               0.0      0.355675\n",
-      "50%       2.484704               0.0      0.790803\n",
-      "75%       6.249823               0.0      1.231620\n",
-      "max      29.810294               0.0     26.470978\n",
+      "mean      4.349035               0.0      1.105851\n",
+      "std       4.947727               0.0      1.966166\n",
+      "min       0.016877               0.0      0.076602\n",
+      "25%       0.693364               0.0      0.296986\n",
+      "50%       2.484704               0.0      0.682970\n",
+      "75%       6.249823               0.0      1.120646\n",
+      "max      29.810294               0.0     25.947430\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -163,17 +163,205 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9819c60c-df5f-41c6-ae83-888c75aa78d7",
+   "metadata": {},
+   "source": [
+    "## Learnable Rounding"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "980ea592-9292-449a-a952-808d3abf1696",
+   "execution_count": 8,
+   "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# hyperparameters\n",
+    "penalty_weight = 100  # weight of constraint violation penealty\n",
+    "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
+    "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
+    "hsize = 32            # width of hidden layers for solution mapping\n",
+    "lr = 1e-2             # learning rate\n",
+    "batch_size = 64       # batch size"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set problem\n",
+    "import neuromancer as nm\n",
+    "from src.problem import nmRosenbrock\n",
+    "from src.func.layer import netFC\n",
+    "from src.func import roundGumbelModel\n",
+    "# define Rosenbrock objective functions and constraints for both problem types\n",
+    "obj_rel, constrs_rel = nmRosenbrock([\"x\"], [\"p\", \"a\"], steepness, num_blocks, penalty_weight=penalty_weight)\n",
+    "obj_rnd, constrs_rnd = nmRosenbrock([\"x_rnd\"], [\"p\", \"a\"], steepness, num_blocks, penalty_weight=penalty_weight)\n",
+    "# build neural architecture for the solution map\n",
+    "func = nm.modules.blocks.MLP(insize=num_blocks+1, outsize=2*num_blocks, bias=True,\n",
+    "                             linear_map=nm.slim.maps[\"linear\"],\n",
+    "                             nonlin=nn.ReLU, hsizes=[hsize]*hlayers_sol)\n",
+    "smap = nm.system.Node(func, [\"p\", \"a\"], [\"x\"], name=\"smap\")\n",
+    "# define rounding model\n",
+    "layers_rnd = netFC(input_dim=3*num_blocks+1, hidden_dims=[hsize]*hlayers_rnd, output_dim=2*num_blocks)\n",
+    "rnd = roundGumbelModel(layers=layers_rnd, param_keys=[\"p\", \"a\"], var_keys=[\"x\"],\n",
+    "                       output_keys=[\"x_rnd\"], int_ind={\"x\":range(2*num_blocks)}, name=\"round\")\n",
+    "# build neuromancer problem for rounding\n",
+    "components = [smap, rnd]\n",
+    "loss = nm.loss.PenaltyLoss(obj_rnd, constrs_rnd)\n",
+    "problem = nm.problem.Problem(components, loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "epoch: 0  train_loss: 393.37066650390625\n",
+      "epoch: 1  train_loss: 236.1530303955078\n",
+      "epoch: 2  train_loss: 248.39842224121094\n",
+      "epoch: 3  train_loss: 220.25059509277344\n",
+      "epoch: 4  train_loss: 252.8489227294922\n",
+      "epoch: 5  train_loss: 311.5302429199219\n",
+      "epoch: 6  train_loss: 364.1553039550781\n",
+      "epoch: 7  train_loss: 297.86102294921875\n",
+      "epoch: 8  train_loss: 356.09906005859375\n",
+      "epoch: 9  train_loss: 432.9923095703125\n",
+      "epoch: 10  train_loss: 418.4895324707031\n",
+      "epoch: 11  train_loss: 417.7132568359375\n",
+      "epoch: 12  train_loss: 301.82012939453125\n",
+      "epoch: 13  train_loss: 309.495849609375\n",
+      "epoch: 14  train_loss: 314.6213073730469\n",
+      "epoch: 15  train_loss: 317.92095947265625\n",
+      "epoch: 16  train_loss: 322.7508850097656\n",
+      "epoch: 17  train_loss: 252.92637634277344\n",
+      "epoch: 18  train_loss: 218.02127075195312\n",
+      "epoch: 19  train_loss: 277.4512634277344\n",
+      "epoch: 20  train_loss: 297.1280822753906\n",
+      "epoch: 21  train_loss: 318.3865966796875\n",
+      "epoch: 22  train_loss: 335.3597717285156\n",
+      "epoch: 23  train_loss: 357.18841552734375\n",
+      "epoch: 24  train_loss: 321.3070068359375\n",
+      "epoch: 25  train_loss: 334.1412353515625\n",
+      "epoch: 26  train_loss: 327.4801940917969\n",
+      "epoch: 27  train_loss: 327.1810302734375\n",
+      "epoch: 28  train_loss: 328.8029479980469\n",
+      "epoch: 29  train_loss: 329.9187316894531\n",
+      "epoch: 30  train_loss: 364.4698181152344\n",
+      "epoch: 31  train_loss: 371.3477783203125\n",
+      "epoch: 32  train_loss: 339.40740966796875\n",
+      "epoch: 33  train_loss: 330.9693603515625\n",
+      "epoch: 34  train_loss: 338.9005432128906\n",
+      "epoch: 35  train_loss: 361.0300598144531\n",
+      "epoch: 36  train_loss: 315.2174072265625\n",
+      "epoch: 37  train_loss: 338.2124328613281\n",
+      "epoch: 38  train_loss: 353.9998779296875\n",
+      "epoch: 39  train_loss: 362.0919494628906\n",
+      "epoch: 40  train_loss: 345.6153259277344\n",
+      "epoch: 41  train_loss: 301.2157897949219\n",
+      "Early stopping!!!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# training\n",
+    "epochs = 200                    # number of training epochs\n",
+    "warmup = 20                     # number of epochs to wait before enacting early stopping policy\n",
+    "patience = 20                   # number of epochs with no improvement in eval metric to allow before early stopping\n",
+    "optimizer = torch.optim.Adam(problem.parameters(), lr=lr)\n",
+    "# create a trainer for the problem\n",
+    "trainer = nm.trainer.Trainer(problem, loader_train, loader_dev, loader_test, optimizer, \n",
+    "                            epochs=epochs, patience=patience, warmup=warmup)\n",
+    "# training for the rounding problem\n",
+    "best_model = trainer.train()\n",
+    "# load best model dict\n",
+    "problem.load_state_dict(best_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 277.09it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean    107.668126          1.521226      0.003088\n",
+      "std      89.210849          1.668557      0.001047\n",
+      "min       0.016877          0.000000      0.001000\n",
+      "25%      49.161547          0.000000      0.002139\n",
+      "50%      71.139965          0.949109      0.003000\n",
+      "75%     180.704463          2.577007      0.003510\n",
+      "max     532.802261          5.954126      0.007015\n",
+      "Number of infeasible solution: 702\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test,a_test))):\n",
+    "    # data point as tensor\n",
+    "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32), \n",
+    "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32),\n",
+    "                  \"name\": \"test\"}\n",
+    "    # infer\n",
+    "    tick = time.time()\n",
+    "    output = problem(datapoints)\n",
+    "    tock = time.time()\n",
+    "    # assign params\n",
+    "    model.set_param_val({\"p\":p, \"a\":a})\n",
+    "    # assign vars\n",
+    "    x = output[\"test_x_rnd\"]\n",
+    "    for i in range(2*num_blocks):\n",
+    "        model.vars[\"x\"][i].value = x[0,i].item()\n",
+    "    # get solutions\n",
+    "    xval, objval = model.get_val()    \n",
+    "    params.append(list(p))\n",
+    "    sols.append(list(list(xval.values())[0].values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/rosenbrock_nm.csv\")"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
+   "id": "603e5451-8d97-4bf3-a093-ee5444747a8f",
    "metadata": {},
    "outputs": [],
    "source": []
