Add new heuristic

--- a/Test Rosenbrock.ipynb
+++ b/Test Rosenbrock.ipynb
@@ -123,7 +123,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [18:26<00:00,  1.11s/it]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [19:06<00:00,  1.15s/it]\n"
      ]
     },
     {
@@ -132,13 +132,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000            1000.0   1000.000000\n",
-      "mean      4.349035               0.0      1.105851\n",
-      "std       4.947727               0.0      1.966166\n",
-      "min       0.016877               0.0      0.076602\n",
-      "25%       0.693364               0.0      0.296986\n",
-      "50%       2.484704               0.0      0.682970\n",
-      "75%       6.249823               0.0      1.120646\n",
-      "max      29.810294               0.0     25.947430\n",
+      "mean      4.349035               0.0      1.145088\n",
+      "std       4.947727               0.0      2.056567\n",
+      "min       0.016877               0.0      0.092586\n",
+      "25%       0.693364               0.0      0.316740\n",
+      "50%       2.484704               0.0      0.688182\n",
+      "75%       6.249823               0.0      1.132088\n",
+      "max      29.810294               0.0     28.444026\n",
       "Number of infeasible solution: 0\n"
      ]
     }
@@ -164,6 +164,73 @@
   },
   {
    "cell_type": "markdown",
+   "id": "96304fbd-08f5-4be7-a81e-83c85332029c",
+   "metadata": {},
+   "source": [
+    "## Heuristic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "356187af-e02d-4478-bf78-ada6a2e1b94b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_heur = model.first_solution_heuristic()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f4c7fc52-cbbc-4414-bf1d-316d65c8db5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:22<00:00, 12.16it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           Obj Val  Constraints Viol  Elapsed Time\n",
+      "count  1000.000000            1000.0   1000.000000\n",
+      "mean   4040.399628               0.0      0.081648\n",
+      "std    3182.304757               0.0      0.033807\n",
+      "min     101.611730               0.0      0.059331\n",
+      "25%     983.457008               0.0      0.062361\n",
+      "50%    2959.336296               0.0      0.075848\n",
+      "75%    7798.104504               0.0      0.078218\n",
+      "max    8328.507513               0.0      0.204479\n",
+      "Number of infeasible solution: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
+    "for p, a in tqdm(list(zip(p_test,a_test))):\n",
+    "    model_heur.set_param_val({\"p\":p, \"a\":a})\n",
+    "    tick = time.time()\n",
+    "    xval, objval = model_heur.solve(\"scip\")\n",
+    "    tock = time.time()\n",
+    "    params.append(list(p)+list(a))\n",
+    "    sols.append(list(xval.values()))\n",
+    "    objvals.append(objval)\n",
+    "    conviols.append(sum(model_heur.cal_violation()))\n",
+    "    elapseds.append(tock - tick)\n",
+    "df = pd.DataFrame({\"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
+    "time.sleep(1)\n",
+    "print(df.describe())\n",
+    "print(\"Number of infeasible solution: {}\".format(np.sum(df[\"Constraints Viol\"] > 0)))\n",
+    "df.to_csv(\"result/rb_heur.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9819c60c-df5f-41c6-ae83-888c75aa78d7",
    "metadata": {},
    "source": [
@@ -172,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -188,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -218,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -277,7 +344,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -307,7 +374,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 277.09it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 282.54it/s]\n"
      ]
     },
     {
@@ -316,13 +383,13 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    107.668126          1.521226      0.003088\n",
-      "std      89.210849          1.668557      0.001047\n",
-      "min       0.016877          0.000000      0.001000\n",
-      "25%      49.161547          0.000000      0.002139\n",
+      "mean    107.668126          1.521226      0.003039\n",
+      "std      89.210849          1.668557      0.000753\n",
+      "min       0.016877          0.000000      0.001511\n",
+      "25%      49.161547          0.000000      0.002512\n",
       "50%      71.139965          0.949109      0.003000\n",
-      "75%     180.704463          2.577007      0.003510\n",
-      "max     532.802261          5.954126      0.007015\n",
+      "75%     180.704463          2.577007      0.003506\n",
+      "max     532.802261          5.954126      0.006596\n",
       "Number of infeasible solution: 702\n"
      ]
     }
