--- a/Test QP.ipynb
+++ b/Test QP.ipynb
@@ -58,6 +58,17 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "f2e7f07c-6a97-44d6-aca7-56f395e0c964",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from src.problem import msQuadratic\n",
+    "model = msQuadratic()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "21938c00-d73f-4255-bc7c-bce6e8034cf8",
    "metadata": {},
    "outputs": [],
@@ -71,7 +82,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "3c1dba02-4b44-4327-8a2d-a58f5a0b6641",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "0it [00:00, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ERROR: evaluating object as numeric value: x[0]\n",
+      "        (object: <class 'pyomo.core.base.var._GeneralVarData'>)\n",
+      "    No value for uninitialized NumericValue object x[0]\n",
+      "ERROR: evaluating object as numeric value: obj\n",
+      "        (object: <class 'pyomo.core.base.objective.ScalarObjective'>)\n",
+      "    No value for uninitialized NumericValue object x[0]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "3000it [05:51,  8.53it/s]\n",
+      "1000it [01:44,  9.60it/s]\n",
+      "1000it [01:46,  9.43it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pyomo import opt as po\n",
+    "# feasibility filter\n",
+    "def feasibility_filter(p_data):\n",
+    "    for i, p in tqdm(enumerate(p_data)):\n",
+    "        # set param\n",
+    "        model.set_param_val({\"p\":p})\n",
+    "        # solve\n",
+    "        _, _ = model.solve(\"scip\")\n",
+    "        while model.res.solver.termination_condition == po.TerminationCondition.infeasible:\n",
+    "            # generate a new p\n",
+    "            p = np.random.uniform(p_low, p_high, 2).astype(np.float32)\n",
+    "            # set param\n",
+    "            model.set_param_val({\"p\":p})\n",
+    "            # solve\n",
+    "            _, _ = model.solve(\"scip\")\n",
+    "        # update p\n",
+    "        p_data[i] = p\n",
+    "\n",
+    "# make all data feasible\n",
+    "feasibility_filter(p_train)\n",
+    "feasibility_filter(p_test)\n",
+    "feasibility_filter(p_dev)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "5ea78c2a-4b04-45da-8474-e9ab899726be",
    "metadata": {},
    "outputs": [],
@@ -98,18 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "f2e7f07c-6a97-44d6-aca7-56f395e0c964",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from src.problem import msQuadratic\n",
-    "model = msQuadratic()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "77e326fa-de2f-415e-a4d4-1f28eef6511a",
    "metadata": {},
    "outputs": [
@@ -117,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:12<00:00, 13.71it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:24<00:00, 11.85it/s]\n"
      ]
     },
     {
@@ -125,15 +185,15 @@
      "output_type": "stream",
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -0.301369          0.287015      0.072262\n",
-      "std       0.015466          0.665298      0.031805\n",
-      "min      -0.310000          0.000000      0.056964\n",
-      "25%      -0.310000          0.000000      0.060942\n",
-      "50%      -0.310000          0.000000      0.061737\n",
-      "75%      -0.300000          0.000000      0.062751\n",
-      "max      -0.212920          3.460264      0.184068\n",
-      "Number of infeasible solution: 212\n"
+      "count  1000.000000            1000.0   1000.000000\n",
+      "mean     -0.300508               0.0      0.083594\n",
+      "std       0.017031               0.0      0.037765\n",
+      "min      -0.310000               0.0      0.058508\n",
+      "25%      -0.310000               0.0      0.061619\n",
+      "50%      -0.310000               0.0      0.073384\n",
+      "75%      -0.300000               0.0      0.077798\n",
+      "max      -0.210132               0.0      0.244359\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
@@ -166,17 +226,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "a8512b84-b103-40f5-ad04-c45d8f9e773f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.heuristic import naive_round"
+    "model_heur = model.first_solution_heuristic()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "827e4eee-f749-4b2b-8549-f75f15a06d0f",
    "metadata": {},
    "outputs": [
@@ -184,7 +244,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:15<00:00, 13.27it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [01:19<00:00, 12.56it/s]\n"
      ]
     },
     {
@@ -192,31 +252,29 @@
      "output_type": "stream",
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -0.302556          0.338047      0.070023\n",
-      "std       0.015731          0.694741      0.031190\n",
-      "min      -0.310000          0.000000      0.053624\n",
-      "25%      -0.310000          0.000000      0.057207\n",
-      "50%      -0.310000          0.000000      0.058233\n",
-      "75%      -0.300000          0.231860      0.068860\n",
-      "max      -0.212920          3.460264      0.182869\n",
-      "Number of infeasible solution: 335\n"
+      "count  1000.000000            1000.0   1000.000000\n",
+      "mean     -0.235842               0.0      0.078855\n",
+      "std       0.117741               0.0      0.034860\n",
+      "min      -0.310000               0.0      0.058023\n",
+      "25%      -0.300000               0.0      0.061376\n",
+      "50%      -0.300000               0.0      0.062733\n",
+      "75%      -0.260710               0.0      0.076504\n",
+      "max       0.000000               0.0      0.186517\n",
+      "Number of infeasible solution: 0\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
     "for p in tqdm(p_test):\n",
-    "    model.set_param_val({\"p\":p})\n",
-    "    model_rel = model.relax()\n",
+    "    model_heur.set_param_val({\"p\":p})\n",
     "    tick = time.time()\n",
-    "    xval_rel, _ = model_rel.solve(\"scip\")\n",
-    "    xval, objval = naive_round(xval_rel, model)\n",
+    "    xval, objval = model_heur.solve(\"scip\")\n",
     "    tock = time.time()\n",
     "    params.append(list(p))\n",
     "    sols.append(list(list(xval.values())[0].values()))\n",
     "    objvals.append(objval)\n",
-    "    conviols.append(sum(model.cal_violation()))\n",
+    "    conviols.append(sum(model_heur.cal_violation()))\n",
     "    elapseds.append(tock - tick)\n",
     "df = pd.DataFrame({\"Param\":params, \"Sol\":sols, \"Obj Val\": objvals, \"Constraints Viol\": conviols, \"Elapsed Time\": elapseds})\n",
     "time.sleep(1)\n",
@@ -235,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "68fa0273-f822-44ed-a6b4-fb84e498dbcb",
    "metadata": {},
    "outputs": [],
@@ -251,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "092c9a37-f345-4a9a-ba61-e0bd6fc46bed",
    "metadata": {},
    "outputs": [],
@@ -281,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "da7fc7d1-cd00-4780-8613-b402c69ca357",
    "metadata": {},
    "outputs": [
@@ -289,75 +347,91 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch: 0  train_loss: 4.2779388427734375\n",
-      "epoch: 1  train_loss: 3.1776251792907715\n",
-      "epoch: 2  train_loss: 3.3425543308258057\n",
-      "epoch: 3  train_loss: 2.1936593055725098\n",
-      "epoch: 4  train_loss: 1.9622385501861572\n",
-      "epoch: 5  train_loss: 1.9493381977081299\n",
-      "epoch: 6  train_loss: 2.089452028274536\n",
-      "epoch: 7  train_loss: 2.0913796424865723\n",
-      "epoch: 8  train_loss: 2.0661263465881348\n",
-      "epoch: 9  train_loss: 2.1217825412750244\n",
-      "epoch: 10  train_loss: 2.098419189453125\n",
-      "epoch: 11  train_loss: 2.0379459857940674\n",
-      "epoch: 12  train_loss: 2.140923500061035\n",
-      "epoch: 13  train_loss: 1.977126121520996\n",
-      "epoch: 14  train_loss: 2.1311705112457275\n",
-      "epoch: 15  train_loss: 2.0974972248077393\n",
-      "epoch: 16  train_loss: 2.157132387161255\n",
-      "epoch: 17  train_loss: 2.0126335620880127\n",
-      "epoch: 18  train_loss: 2.07010817527771\n",
-      "epoch: 19  train_loss: 2.150472640991211\n",
-      "epoch: 20  train_loss: 2.078364849090576\n",
-      "epoch: 21  train_loss: 2.1132590770721436\n",
-      "epoch: 22  train_loss: 2.147148847579956\n",
-      "epoch: 23  train_loss: 2.1320548057556152\n",
-      "epoch: 24  train_loss: 2.2711873054504395\n",
-      "epoch: 25  train_loss: 2.221454620361328\n",
-      "epoch: 26  train_loss: 2.1209497451782227\n",
-      "epoch: 27  train_loss: 2.133431911468506\n",
-      "epoch: 28  train_loss: 2.1575512886047363\n",
-      "epoch: 29  train_loss: 2.0523781776428223\n",
-      "epoch: 30  train_loss: 2.199097156524658\n",
-      "epoch: 31  train_loss: 2.2276241779327393\n",
-      "epoch: 32  train_loss: 2.20854115486145\n",
-      "epoch: 33  train_loss: 2.131537914276123\n",
-      "epoch: 34  train_loss: 2.0401837825775146\n",
-      "epoch: 35  train_loss: 2.1563377380371094\n",
-      "epoch: 36  train_loss: 2.2215676307678223\n",
-      "epoch: 37  train_loss: 2.148292064666748\n",
-      "epoch: 38  train_loss: 2.264235496520996\n",
-      "epoch: 39  train_loss: 2.2260119915008545\n",
-      "epoch: 40  train_loss: 2.250239610671997\n",
-      "epoch: 41  train_loss: 2.1689436435699463\n",
-      "epoch: 42  train_loss: 2.086895227432251\n",
-      "epoch: 43  train_loss: 2.2512600421905518\n",
-      "epoch: 44  train_loss: 2.292621612548828\n",
-      "epoch: 45  train_loss: 2.048380136489868\n",
-      "epoch: 46  train_loss: 2.3589420318603516\n",
-      "epoch: 47  train_loss: 2.1224443912506104\n",
-      "epoch: 48  train_loss: 2.2875561714172363\n",
-      "epoch: 49  train_loss: 2.3153231143951416\n",
-      "epoch: 50  train_loss: 2.1516964435577393\n",
-      "epoch: 51  train_loss: 2.1503708362579346\n",
-      "epoch: 52  train_loss: 2.27815318107605\n",
-      "epoch: 53  train_loss: 2.175485849380493\n",
-      "epoch: 54  train_loss: 2.3296940326690674\n",
-      "epoch: 55  train_loss: 2.129692792892456\n",
-      "epoch: 56  train_loss: 2.213913679122925\n",
-      "epoch: 57  train_loss: 2.281513214111328\n",
-      "epoch: 58  train_loss: 2.1524782180786133\n",
-      "epoch: 59  train_loss: 2.1806390285491943\n",
-      "epoch: 60  train_loss: 2.239077091217041\n",
-      "epoch: 61  train_loss: 2.2550580501556396\n",
-      "epoch: 62  train_loss: 2.1464035511016846\n",
-      "epoch: 63  train_loss: 2.2542994022369385\n",
-      "epoch: 64  train_loss: 2.177757978439331\n",
-      "epoch: 65  train_loss: 2.292231559753418\n",
-      "epoch: 66  train_loss: 2.344034433364868\n",
-      "epoch: 67  train_loss: 2.246304512023926\n",
-      "epoch: 68  train_loss: 2.2634904384613037\n",
+      "epoch: 0  train_loss: 1.9006130695343018\n",
+      "epoch: 1  train_loss: 0.8498107194900513\n",
+      "epoch: 2  train_loss: 0.8236396312713623\n",
+      "epoch: 3  train_loss: 0.3078206181526184\n",
+      "epoch: 4  train_loss: 0.360994815826416\n",
+      "epoch: 5  train_loss: 0.6205000877380371\n",
+      "epoch: 6  train_loss: 0.6599565148353577\n",
+      "epoch: 7  train_loss: 1.07606840133667\n",
+      "epoch: 8  train_loss: 0.16626447439193726\n",
+      "epoch: 9  train_loss: 0.037488069385290146\n",
+      "epoch: 10  train_loss: 0.011245842091739178\n",
+      "epoch: 11  train_loss: 0.1659967303276062\n",
+      "epoch: 12  train_loss: 0.13184885680675507\n",
+      "epoch: 13  train_loss: 0.06834141910076141\n",
+      "epoch: 14  train_loss: 0.08455299586057663\n",
+      "epoch: 15  train_loss: 0.07996489852666855\n",
+      "epoch: 16  train_loss: 0.01878316141664982\n",
+      "epoch: 17  train_loss: 0.18229149281978607\n",
+      "epoch: 18  train_loss: 0.19630023837089539\n",
+      "epoch: 19  train_loss: 0.011691409163177013\n",
+      "epoch: 20  train_loss: 0.13464005291461945\n",
+      "epoch: 21  train_loss: 0.16005240380764008\n",
+      "epoch: 22  train_loss: 0.10071253031492233\n",
+      "epoch: 23  train_loss: 0.24319495260715485\n",
+      "epoch: 24  train_loss: 0.13701459765434265\n",
+      "epoch: 25  train_loss: 0.1340608149766922\n",
+      "epoch: 26  train_loss: 0.09225074201822281\n",
+      "epoch: 27  train_loss: 0.0652281865477562\n",
+      "epoch: 28  train_loss: 0.18333745002746582\n",
+      "epoch: 29  train_loss: 0.2145068347454071\n",
+      "epoch: 30  train_loss: 0.07833746820688248\n",
+      "epoch: 31  train_loss: 0.12590950727462769\n",
+      "epoch: 32  train_loss: 0.17889365553855896\n",
+      "epoch: 33  train_loss: 0.18999610841274261\n",
+      "epoch: 34  train_loss: -0.01384731288999319\n",
+      "epoch: 35  train_loss: 0.26211053133010864\n",
+      "epoch: 36  train_loss: 0.04768048971891403\n",
+      "epoch: 37  train_loss: 0.3262397348880768\n",
+      "epoch: 38  train_loss: 0.20877160131931305\n",
+      "epoch: 39  train_loss: 0.10120122134685516\n",
+      "epoch: 40  train_loss: 0.07615898549556732\n",
+      "epoch: 41  train_loss: 0.07252083718776703\n",
+      "epoch: 42  train_loss: -0.05709519237279892\n",
+      "epoch: 43  train_loss: 0.10680539906024933\n",
+      "epoch: 44  train_loss: 0.23602311313152313\n",
+      "epoch: 45  train_loss: 0.20792995393276215\n",
+      "epoch: 46  train_loss: 0.1245453879237175\n",
+      "epoch: 47  train_loss: 0.1963016390800476\n",
+      "epoch: 48  train_loss: -0.04158268868923187\n",
+      "epoch: 49  train_loss: 0.20684213936328888\n",
+      "epoch: 50  train_loss: -0.0011113894870504737\n",
+      "epoch: 51  train_loss: 0.12187770009040833\n",
+      "epoch: 52  train_loss: 0.25110068917274475\n",
+      "epoch: 53  train_loss: 0.14202497899532318\n",
+      "epoch: 54  train_loss: 0.030732834711670876\n",
+      "epoch: 55  train_loss: 0.17314143478870392\n",
+      "epoch: 56  train_loss: 0.06879643350839615\n",
+      "epoch: 57  train_loss: 0.07660350203514099\n",
+      "epoch: 58  train_loss: 0.28285667300224304\n",
+      "epoch: 59  train_loss: 0.064274862408638\n",
+      "epoch: 60  train_loss: 0.18942344188690186\n",
+      "epoch: 61  train_loss: 0.08830129355192184\n",
+      "epoch: 62  train_loss: 0.17188067734241486\n",
+      "epoch: 63  train_loss: 0.09357956796884537\n",
+      "epoch: 64  train_loss: 0.2285189926624298\n",
+      "epoch: 65  train_loss: -0.09588921070098877\n",
+      "epoch: 66  train_loss: 0.02189658209681511\n",
+      "epoch: 67  train_loss: 0.16782671213150024\n",
+      "epoch: 68  train_loss: 0.11983320862054825\n",
+      "epoch: 69  train_loss: 0.16288329660892487\n",
+      "epoch: 70  train_loss: 0.10469335317611694\n",
+      "epoch: 71  train_loss: -0.028538338840007782\n",
+      "epoch: 72  train_loss: 0.1403777003288269\n",
+      "epoch: 73  train_loss: 0.18399327993392944\n",
+      "epoch: 74  train_loss: 0.10914745926856995\n",
+      "epoch: 75  train_loss: 0.20362241566181183\n",
+      "epoch: 76  train_loss: 0.062230970710515976\n",
+      "epoch: 77  train_loss: 0.1258014589548111\n",
+      "epoch: 78  train_loss: 0.04506652429699898\n",
+      "epoch: 79  train_loss: 0.13377834856510162\n",
+      "epoch: 80  train_loss: 0.0014388776617124677\n",
+      "epoch: 81  train_loss: 0.020578525960445404\n",
+      "epoch: 82  train_loss: 0.09422886371612549\n",
+      "epoch: 83  train_loss: 0.03177850320935249\n",
+      "epoch: 84  train_loss: 0.12764351069927216\n",
       "Early stopping!!!\n"
      ]
     },
@@ -367,7 +441,7 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "20a7a994-eeac-459a-a799-12e78394b2a9",
    "metadata": {},
    "outputs": [
@@ -397,7 +471,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:07<00:00, 132.24it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:12<00:00, 78.16it/s]\n"
      ]
     },
     {
@@ -406,14 +480,14 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean     -0.249774          0.145520      0.006935\n",
-      "std       0.069338          0.359052      0.001169\n",
-      "min      -0.388125          0.000000      0.005000\n",
-      "25%      -0.281723          0.000000      0.006084\n",
-      "50%      -0.277095          0.000000      0.006600\n",
-      "75%      -0.244082          0.000000      0.007408\n",
-      "max       0.166659          1.572065      0.013440\n",
-      "Number of infeasible solution: 212\n"
+      "mean     -0.289489          0.000051      0.011645\n",
+      "std       0.019035          0.001018      0.003067\n",
+      "min      -0.297858          0.000000      0.006435\n",
+      "25%      -0.297858          0.000000      0.009306\n",
+      "50%      -0.297858          0.000000      0.010991\n",
+      "75%      -0.291715          0.000000      0.013458\n",
+      "max      -0.186733          0.029536      0.031913\n",
+      "Number of infeasible solution: 4\n"
      ]
     }
    ],
